2004-02-11  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-icon-sel.c (sort_file_list): Use strcoll
	instead of strcmp.

2004-02-10  Christian Persch  <chpe@cvs.gnome.org>

	* libgnomeui/gnome-client.c: (gnome_client_module_class_init): Remove
	G_PARAM_CONSTRUCT_ONLY flag from the paramspec of the sm-connect
	proprety, since it's set after construct time when the args are parsed
	(Bug #131867).

2004-02-09  Fernando Herrera  <fherrera@onirica.com>

	* glade/glade-gnome.c: (file_entry_set_use_filechooser),
	(glade_module_register_widgets): Register "use_filechooser" prop in
	glade

2004-02-09  Carlos Garnacho Parro  <carlosg@gnome.org>

	* libgnomeui/gnome-file-entry.c: added "use_filechooser" property
	that enables the explicit use of GtkFileChooser instead of 
	GtkFileSelection
	* libgnomeui/gnome-pixmap-entry.c: ditto
	* libgnomeui/gnome-icon-entry.c: made it to use GtkFileChooser API

2004-02-07  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/Makefile.am: Remove more deprecated flags.

2004-02-04  Padraig O'Briain <padraig.obriain@sun.com>

	* libgnomeui/gnome-color-picker.c (gnome_color_picker_instance_init):
	Do not set accessible name for GnomeColorPicker. Fixes bug #133200.

	* libgnomeui/gnome-messagebox.c (gnome_message_box_construct): Set
	role to ATK_ROLE_ALERT. Fixes bug #129567.

2004-02-03  Jeffrey Stedfast  <fejj@ximian.com>

	* libgnomeui/gnome-ui-init.c (libgnomeui_class_init): Don't make
	the "show-crash-dialog" property CONSTRUCT_ONLY because it can't
	be set at construct time because we don't get to parse our args
	until afterwards.

2004-02-03  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.4

2004-01-21  Iain <iain@prettypeople.org>

	* libgnomeui/gnome_segv.c (main): Remove the separator from the window

2004-01-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.c (gnome_icon_lookup):
	Fix GNOME_ICON_LOOKUP_FLAGS_ALLOW_SVG_AS_THEMSELVES behaviour
	when gdk-pixbuf supports svgs.
